Clean up some compiler warnings (Casts and unused variables)
* src/yelp-window.c:
* src/yelp-search-pager.c:
Clean up some compiler warnings
(Casts and unused variables)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-07-21  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-window.c: 
+	* src/yelp-search-pager.c: 
+	Clean up some compiler warnings
+	(Casts and unused variables)
+	
 2006-07-19  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-toc-pager.c:
