--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-23  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2006-07-22  Kostas Papadimas  <pkst@gnome.org>
 
 	* el.po: Updated Greek translation
