Make translation of "Repeat search online" string easier.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 	* stylesheets/search2html.xsl: 
 	Add a new link to the search results to allow
 	repeating the search online at the GNOME support forums
+	Additionally: Allow better translation of the message
+		      Allow translation of the site name
+
 	
 2006-07-23  Brent Smith  <gnome@nextreality.net>
 
