==================== 2.15.5 ==================== 2006-07-24  Don Scorgie <dscorgie@cvs.gnome.org>
        * NEWS:
        * configure.in:
        - Version 2.15.5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.15.5 ====================
+
+2006-07-24  Don Scorgie <dscorgie@cvs.gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.15.5
+
 2006-07-24  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-search-pager.c: 
