--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+Changed in 2.15.5:
+------------------
+* Select only 1 translation on the description		    (Don Scorgie)
+  in the TOC
+* Code cleanup						    (Don Scorgie)
+* Move to gtk+ printing instead of libgnomeprint	    (Don Scorgie)
+* Basic search update (bugs #341797, #341800, #347819)	    (Don Scorgie)
+	       bug #335962 on its way to being fixed
+* Bump min Beagle version to 0.2.4			    (Brent Smith)
+* Fix stale socket problem when Beagle is used (bug #348362)(Brent Smith)
+* Add a new "Repeat search online at GNOME Support Forums"
+  to search results (bug #344843)			    (Don Scorgie)
+* Updated Translations:
+ca: Gil Forcada
+cs: Jakub Friedl
+de: Hendrik Richter
+dz: Guntupalli Karunakar and Dzongkhalinux team
+el: Kostas Papadimas
+es: Francisco Javier F. Serrador
+et: Priit Laes
+eu: Inaki Larranaga
+fi: Ilkka Tuohela
+gu: Ankit Patel
+he: Yair Hershkovitz
+ko: Changwoo Ryu
+nl: Tino Meinen
+th: Theppitak Karoonboonyanan
+zh_CN: Funda Wang
+
 Changes in 2.15.4:
 ------------------
 * Many TOC structure changes                                (Brent Smith)
