--- a/po/et.po
+++ b/po/et.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-14 16:49+0200\n"
-"PO-Revision-Date: 2006-07-14 23:27+0200\n"
-"Last-Translator: Priit Laes <amd@store20.com>\n"
+"PO-Revision-Date: 2006-07-16 19:15+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -462,7 +462,7 @@ msgstr "_Järjehoidjad:"
 
 #: ../data/ui/yelp.glade.h:11
 msgid "_Browse with caret"
-msgstr "_Tekstikursori näitamine sirvimisel"
+msgstr "Sirvimisel näidatakse _tekstikursorit"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Find:"
@@ -470,7 +470,7 @@ msgstr "_Otsing: "
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Fixed width:"
-msgstr "_Fikseeritud laius:"
+msgstr "_Fikseeritud laiusega:"
 
 #: ../data/ui/yelp.glade.h:14
 msgid "_Location:"
@@ -490,11 +490,11 @@ msgstr "_Pealkiri:"
 
 #: ../data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr "Süsteemsete _kirjatüüpide kasutamine"
+msgstr "_Kasutatakse süsteemseid kirjatüüpe"
 
 #: ../data/ui/yelp.glade.h:19
 msgid "_Variable width:"
-msgstr "_Muutuv laius:"
+msgstr "_Muutuva laiusega:"
 
 #: ../data/ui/yelp.glade.h:20
 msgid "_Wrap around"
