Remove fixed font sizes from search results Remove fixed colours from
* stylesheets/search2html.xsl:
Remove fixed font sizes from search results
Remove fixed colours from search results
Fixes bug #348563 and makes page respect
theme setting

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-07-25  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* stylesheets/search2html.xsl: 
+        Remove fixed font sizes from search results
+        Remove fixed colours from search results
+	Fixes bug #348563 and makes page respect
+	theme setting
+	
+
 ==================== 2.15.5 ====================
 
 2006-07-24  Don Scorgie <dscorgie@cvs.gnome.org>
