--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-25  Shaun McCance  <shaunm@gnome.org>
+
+	* data/toc.xml.in:
+	- Changed "Sound & Vision" to "Sound & Video"
+
 2006-07-25  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* stylesheets/search2html.xsl: 
