--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-26  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 2006-07-25  Jakub Friedl  <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation.
