--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-27  Ankit Patel  <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2006-07-26  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
