--- a/po/gu.po
+++ b/po/gu.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.gu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-07-25 02:23+0200\n"
-"PO-Revision-Date: 2006-07-25 10:49+0530\n"
+"POT-Creation-Date: 2006-07-27 02:16+0200\n"
+"PO-Revision-Date: 2006-07-27 11:29+0530\n"
 "Last-Translator: Ankit Patel <ankit644@yahoo.com>\n"
 "Language-Team: Gujarati <indianoss-gujarati@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -14,6 +14,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"\n"
 "\n"
 "\n"
 "\n"
@@ -399,8 +400,8 @@ msgid "Scientific Applications."
 msgstr "વૈજ્ઞાનિક કાર્યક્રમો."
 
 #: ../data/toc.xml.in.h:28
-msgid "Sound &amp; Vision"
-msgstr "સાઉન્ડ &amp; દૃશ્ય"
+msgid "Sound &amp; Video"
+msgstr "સાઉન્ડ &amp; વીડિયો"
 
 #: ../data/toc.xml.in.h:29
 msgid "System Tools"
