--- a/po/es.po
+++ b/po/es.po
@@ -1,24 +1,24 @@
 # traducción de es.po al Spanish
+# Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001-2002,2003.
+# Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004, 2005, 2006.
 # translation of es.po to
 # translation of es.po to
 # translation of es.po to
 # translation of es.po to Spanish
 # yelp spanish .po file.
 # Copyright (C) 2001,2003, 2004, 2005, 2006 Free Software Foundation, Inc.
-# Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001-2002,2003.
-# Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004, 2005, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-07-24 19:45+0200\n"
-"PO-Revision-Date: 2006-07-24 19:45+0200\n"
+"POT-Creation-Date: 2006-07-27 11:51+0200\n"
+"PO-Revision-Date: 2006-07-27 11:52+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.11.1\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:1838
@@ -390,8 +390,8 @@ msgid "Scientific Applications."
 msgstr "Aplicaciones científicas"
 
 #: ../data/toc.xml.in.h:28
-msgid "Sound &amp; Vision"
-msgstr "Sonido y visión"
+msgid "Sound &amp; Video"
+msgstr "Sonido y vídeo"
 
 #: ../data/toc.xml.in.h:29
 msgid "System Tools"
@@ -686,7 +686,20 @@ msgstr "Ocurrió un error al imprimir"
 msgid "It was not possible to print your document: %s"
 msgstr "No es posible imprimir su documento: %s"
 
-#: ../src/yelp-search-pager.c:706
+#. TRANSLATORS:  If you know of a forum in your own language, please
+#. * change this URL to the type required for a search of the site.
+#. * The %s argument is the search terms
+#.
+#: ../src/yelp-search-pager.c:73
+#, c-format
+msgid "http://gnomesupport.org/forums/search.php?search_keywords=%s&search_cat=1"
+msgstr "http://gnomesupport.org/forums/search.php?search_keywords=%s&search_cat=1"
+
+#: ../src/yelp-search-pager.c:75
+msgid "the GNOME Support Forums"
+msgstr "Los fórums de asistencia de GNOME"
+
+#: ../src/yelp-search-pager.c:710
 #, c-format
 msgid ""
 "Your search could not be processed. The file ‘%s’ is either missing or is "
@@ -695,12 +708,12 @@ msgstr ""
 "Su búsqueda no se pudo procesar. El archivo  «%s» falta o no es una hoja de "
 "estilo XSLT válida."
 
-#: ../src/yelp-search-pager.c:758
+#: ../src/yelp-search-pager.c:762
 #, c-format
 msgid "No results for \"%s\""
 msgstr "Sin resultados para «%s»"
 
-#: ../src/yelp-search-pager.c:759
+#: ../src/yelp-search-pager.c:763
 msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
@@ -708,26 +721,32 @@ msgstr ""
 "Intente usar palabras diferentes para describir el problema que está "
 "teniendo o el asunto del que quiere ayuda."
 
-#: ../src/yelp-search-pager.c:762
+#: ../src/yelp-search-pager.c:766
 #, c-format
 msgid "Search results for \"%s\""
 msgstr "Buscar resultados para «%s»"
 
-#: ../src/yelp-search-pager.c:775
-msgid "Repeat the search online at "
-msgstr "Repetir la búsqueda en línea en "
+#. TRANSLATORS: Please don't do anything funny with the
+#. * format arguement.  It isn't really going through a printf
+#. * The %s is used to indicate where the name of the site (linked)
+#. * should be.  This is done in the XSLT
+#.
+#: ../src/yelp-search-pager.c:783
+#, c-format
+msgid "Repeat the search online at %s"
+msgstr "Repetir la búsqueda en línea en %s"
 
-#: ../src/yelp-search-pager.c:846 ../src/yelp-toc-pager.c:2133
+#: ../src/yelp-search-pager.c:855 ../src/yelp-toc-pager.c:2133
 #: ../src/yelp-xslt-pager.c:364
 msgid "No href attribute found on yelp:document"
 msgstr "No se encontró atributo href en yelp:document"
 
-#: ../src/yelp-search-pager.c:860 ../src/yelp-toc-pager.c:2146
+#: ../src/yelp-search-pager.c:869 ../src/yelp-toc-pager.c:2146
 #: ../src/yelp-xslt-pager.c:380 ../src/yelp-xslt-pager.c:531
 msgid "Out of memory"
 msgstr "Se agotó la memoria"
 
-#: ../src/yelp-search-pager.c:901 ../src/yelp-toc-pager.c:2195
+#: ../src/yelp-search-pager.c:910 ../src/yelp-toc-pager.c:2195
 msgid "Help Contents"
 msgstr "Contenido de la ayuda"
 
@@ -739,14 +758,13 @@ msgstr "Contenido de la ayuda"
 #. * "how do I", and words for functional states like "not",
 #. * "work", and "broken".
 #.
-#: ../src/yelp-search-pager.c:1227
+#: ../src/yelp-search-pager.c:1236
 msgid ""
 "a:about:an:are:as:at:be:broke:broken:by:can:can't:dialog:dialogue:do:doesn't:"
 "doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:"
 "help:how:i:in:is:it:item:me:my:of:on:or:tell:that:the:thing:this:to:what:"
 "where:who:will:with:won't:wont:why:work:working:works"
-msgstr ""
-"acerca de:con:contra:de:desde:elemento:es:hace:mi:por:que:según:sin:sobre:son"
+msgstr "acerca de:con:contra:de:desde:elemento:es:hace:mi:por:que:según:sin:sobre:son"
 
 #. Translators: This is a list of common prefixes for words.
 #. * Do not translate this directly.  Instead, use a colon
@@ -756,7 +774,7 @@ msgstr ""
 #. * E.g. if the common prefix is re then the string would be
 #. * "re:"
 #.
-#: ../src/yelp-search-pager.c:1243
+#: ../src/yelp-search-pager.c:1252
 msgid "re"
 msgstr "auto:re:"
 
@@ -767,11 +785,11 @@ msgstr "auto:re:"
 #. * please use the strig NULL.  If there is only 1, please
 #. * add a colon at the end of the list
 #.
-#: ../src/yelp-search-pager.c:1252
+#: ../src/yelp-search-pager.c:1261
 msgid "ers:er:ing:es:s:'s"
 msgstr "ando:mente:"
 
-#: ../src/yelp-search-pager.c:1446 ../src/yelp-toc-pager.c:620
+#: ../src/yelp-search-pager.c:1455 ../src/yelp-toc-pager.c:620
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr "No se pudo cargar el archivo OMF «%s»."
@@ -991,8 +1009,7 @@ msgstr "Navegador de ayuda"
 
 #: ../src/yelp-window.c:926 ../src/yelp-window.c:1082
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
-"El Identificador Uniforme de Recurso (URI) para el archivo es inválido."
+msgstr "El Identificador Uniforme de Recurso (URI) para el archivo es inválido."
 
 #: ../src/yelp-window.c:938 ../src/yelp-window.c:1077
 #, c-format
@@ -1112,3 +1129,4 @@ msgstr ""
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Obtenga ayuda acerca de GNOME"
+
