--- a/po/fr.po
+++ b/po/fr.po
@@ -17,9 +17,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.14.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-07-21 19:20+0200\n"
-"PO-Revision-Date: 2006-07-21 19:15+0200\n"
-"Last-Translator: Jonathan Ernst <jonathan@ernstfamily.ch>\n"
+"POT-Creation-Date: 2006-07-30 14:45+0200\n"
+"PO-Revision-Date: 2006-07-30 14:45+0200\n"
+"Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -179,7 +179,7 @@ msgstr "Bureautique"
 
 #: ../data/toc.xml.in.h:14
 msgid "Other"
-msgstr "Autres"
+msgstr "Autre"
 
 #: ../data/toc.xml.in.h:15
 msgid "Other Documentation"
@@ -235,7 +235,7 @@ msgstr "Rechercher"
 
 #: ../data/ui/yelp.glade.h:7
 msgid "Open Location"
-msgstr "Ouvrir l'emplacement"
+msgstr "Ouvrir un emplacement"
 
 #: ../data/ui/yelp.glade.h:9
 msgid "Re_name"
@@ -243,7 +243,7 @@ msgstr "Re_nommer"
 
 #: ../data/ui/yelp.glade.h:10
 msgid "_Bookmarks:"
-msgstr "_Signets : "
+msgstr "_Signets :"
 
 #: ../data/ui/yelp.glade.h:11
 msgid "_Browse with caret"
@@ -251,7 +251,7 @@ msgstr "_Naviguer avec le curseur"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Find:"
-msgstr "_Rechercher : "
+msgstr "_Rechercher :"
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Fixed width:"
@@ -271,7 +271,7 @@ msgstr "_Précédent"
 
 #: ../data/ui/yelp.glade.h:17
 msgid "_Title:"
-msgstr "_Titre : "
+msgstr "_Titre :"
 
 #: ../data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
@@ -493,7 +493,7 @@ msgstr "En attente d'impression"
 
 #: ../src/yelp-print.c:559
 msgid "_From:"
-msgstr "_Expéditeur : "
+msgstr "_De :"
 
 #: ../src/yelp-print.c:572
 msgid "Sets the start of the range of pages to be printed"
@@ -501,7 +501,7 @@ msgstr "Indique le début de la sélection de pages à imprimer"
 
 #: ../src/yelp-print.c:574
 msgid "_To:"
-msgstr "_Destination : "
+msgstr "_À :"
 
 #: ../src/yelp-print.c:587
 msgid "Sets the end of the range of pages to be printed"
@@ -646,7 +646,7 @@ msgstr "_Copier"
 
 #: ../src/yelp-window.c:354
 msgid "_Select All"
-msgstr "Tout _sélectionner"
+msgstr "_Tout sélectionner"
 
 #: ../src/yelp-window.c:359
 msgid "_Find..."
@@ -714,11 +714,11 @@ msgstr "_Sommaire"
 
 #: ../src/yelp-window.c:422
 msgid "_Add Bookmark"
-msgstr "_Ajouter un signet"
+msgstr "A_jouter un signet"
 
 #: ../src/yelp-window.c:427
 msgid "_Edit Bookmarks..."
-msgstr "_Éditer les signets..."
+msgstr "É_diter les signets..."
 
 #: ../src/yelp-window.c:433
 msgid "_Open Link"
@@ -781,7 +781,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:1028
 msgid "_Search:"
-msgstr "_Recherche : "
+msgstr "_Rechercher :"
 
 #: ../src/yelp-window.c:1029
 msgid "Search for other documentation"
