--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-04  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>
+
+	* id.po: Updated.
+
 2006-08-03  Runa Bhattacharjee <runabh@gmail.com>
 
 	* bn_IN.po: Updated Bengali India Translation.
