--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-04  Maxim Dziumanenko <dziumanenko@gmail.com>
+
+        * uk.po: Update Ukrainian translation.
+
 2006-08-04  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>
 
 	* id.po: Updated.
