Translation updated by Ivar Smolin.
2006-08-05  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: yelp 2.14\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-19 13:41+0200\n"
-"PO-Revision-Date: 2006-04-20 08:22+0300\n"
+"PO-Revision-Date: 2006-07-30 00:56+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -243,7 +243,7 @@ msgstr "_Järjehoidjad:"
 
 #: ../data/ui/yelp.glade.h:11
 msgid "_Browse with caret"
-msgstr "_Tekstikursori näitamine sirvimisel"
+msgstr "Sirvimisel näidatakse _tekstikursorit"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Find:"
@@ -251,7 +251,7 @@ msgstr "_Otsing: "
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Fixed width:"
-msgstr "_Fikseeritud laius:"
+msgstr "_Fikseeritud laiusega:"
 
 #: ../data/ui/yelp.glade.h:14
 msgid "_Location:"
@@ -271,11 +271,11 @@ msgstr "_Pealkiri:"
 
 #: ../data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr "Süsteemsete _kirjatüüpide kasutamine"
+msgstr "_Kasutatakse süsteemseid kirjatüüpe"
 
 #: ../data/ui/yelp.glade.h:19
 msgid "_Variable width:"
-msgstr "_Muutuv laius:"
+msgstr "_Muutuva laiusega:"
 
 #: ../data/ui/yelp.glade.h:20
 msgid "_Wrap around"
