--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-05  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2006-08-04  Maxim Dziumanenko <dziumanenko@gmail.com>
 
         * uk.po: Update Ukrainian translation.
