Reomve translation of online URL in anticipation of a new script to do the
* src/yelp-search-pager.c:
Reomve translation of online URL in anticipation of a
new script to do the redirection

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-07  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	Reomve translation of online URL in anticipation of a
+	new script to do the redirection
+
 2006-08-05  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-pager.c: 
