--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
+==================== 2.15.91 ====================
 2006-08-07  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.15.91
 
 	* src/yelp-search-pager.c: 
 	Reomve translation of online URL in anticipation of a
