--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+Changed in 2.15.91:
+-------------------
+* Fix search results to be accessible                       (Don Scorgie)
+* Change "Sound & Vision" to "Sound & Video" in TOC         (Shaun McCance)
+* Fix dbus threading in some cases                          (Don Scorgie)
+* Various Cleanups                                          (Christian Persch,
+							     Brent Smith)
+* Remove online search translation.  Will be done by our
+  own script						    (Don Scorgie)
+* Updated Translations:
+bn_IN: Runa Bhattacharjee
+cs: Jakub Friedl
+de: Hendrik Richter
+es: Francisco Javier F. Serrador
+et: Priit Laes, Ivar Smolin
+eu: Inaki Larranaga
+fi: Ilkka Tuohela
+fr: Christophe Merlet
+gu: Ankit Patel
+id: Ahmad Riza H Nst
+mk: Jovan Naumovski
+mk: Jovan Naumovski
+nb: Kjartan Maraas
+nl: Tino Meinen
+th: Theppitak Karoonboonyanan
+uk: Maxim Dziumanenko
+zh_CN: Funda Wang
+
+
 Changed in 2.15.5:
 ------------------
 * Select only 1 translation on the description		    (Don Scorgie)
