Translation updated by Wouter Bolsterlee.
2006-08-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* nl.po: Translation updated by Wouter Bolsterlee.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
+
+	* nl.po: Translation updated by Wouter Bolsterlee.
+
 2006-08-07  Inaki Larranaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
@@ -8,7 +12,7 @@
 
 2006-08-04  Maxim Dziumanenko <dziumanenko@gmail.com>
 
-        * uk.po: Update Ukrainian translation.
+	* uk.po: Update Ukrainian translation.
 
 2006-08-04  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>
 
@@ -183,8 +187,8 @@
 
 2006-07-03  Runa Bhattacharjee <runabh@gmail.com>
 
-        * bn_IN.po: Added Bengali India Translation
-        * LINGUAS: Added Bengali India (bn_IN) to the list of languages.
+	* bn_IN.po: Added Bengali India Translation
+	* LINGUAS: Added Bengali India (bn_IN) to the list of languages.
 
 2006-07-02  Benoît Dejean  <benoit@placenet.org>
 
@@ -196,8 +200,8 @@
 
 2006-06-29  Guntupalli Karunakar  <karunakar@indlinux.org>
 
-        * dz.po: Updated Dzongkha translation
-        by Dzongkhalinux, DIT
+	* dz.po: Updated Dzongkha translation
+	by Dzongkhalinux, DIT
 
 2006-06-27  Vincent van Adrighem  <adrighem@gnome.org>
 
@@ -205,7 +209,7 @@
 
 2006-06-26  Rajesh Ranjan <rajeshkajha@yahoo.com>
 
-        * hi.po: Updated Hindi Translation.
+	* hi.po: Updated Hindi Translation.
 
 2006-06-23  I. Felix  <ifelix25@gmail.com>
 
@@ -367,11 +371,11 @@
 
 2006-04-02  Gora Mohanty  <gmohanty@cvs.gnome.org>
 
-        * or.po: Added to cvs, which I had forgotten to do earlier.
+	* or.po: Added to cvs, which I had forgotten to do earlier.
 
 2006-04-01  Gora Mohanty  <gmohanty@cvs.gnome.org>
 
-        * or.po: Added Oriya translation.
+	* or.po: Added Oriya translation.
 
 2006-03-21  Priit Laes  <amd@store20.com>
 
@@ -399,9 +403,9 @@
 
 2006-03-13  Vladimer Sichinava <vlsichinava@gmail.com>
 
-        * ka.po: Updated Georgian translation by
-	  Malkhaz Barkalaya <malxaz@gmail.com>
-		
+	* ka.po: Updated Georgian translation by
+	Malkhaz Barkalaya <malxaz@gmail.com>
+
 2006-03-10  Guilherme de S. Pastore  <gpastore@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation from Leandro
@@ -413,7 +417,7 @@
 
 2006-03-06  Rajesh Ranjan <rranjan@redhat.com>
 
-        * hi.po: Updated Hindi Translation.
+	* hi.po: Updated Hindi Translation.
 
 2006-03-06  Daniel Nylander  <po@danielnylander.se>
 
@@ -429,7 +433,7 @@
 
 2006-03-03  Maxim Dziumanenko <mvd@mylinux.ua>
 
-        * uk.po: Updated Ukrainian translation.
+	* uk.po: Updated Ukrainian translation.
 
 2006-03-02  Žygimantas Beručka  <zygis@gnome.org>
 
@@ -447,7 +451,7 @@
 
 2006-02-28  Leonid Kanter <leon@asplinux.ru>
 
-        * ru.po: Updated Russian translation
+	* ru.po: Updated Russian translation
 
 2006-02-28  Priit Laes  <amd@store20.com>
 
@@ -537,7 +541,7 @@
 
 2006-02-01  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-02-01  Clytie Siddall <clytie@riverland.net.au>
 
@@ -585,7 +589,7 @@
 
 2006-01-30  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-01-30  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
 
@@ -617,7 +621,7 @@
 
 2006-01-23  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-01-22  Kjartan Maraas  <kmaraas@gnome.org>
 
@@ -747,11 +751,11 @@
 
 2005-01-09  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-01-09  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
-        * ca.po: Updated Catalan translation.
+	* ca.po: Updated Catalan translation.
 	
 2006-01-08  Kjartan Maraas  <kmaraas@gnome.org>
 
@@ -798,7 +802,7 @@
 
 2005-01-06  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2006-01-05  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
@@ -828,7 +832,7 @@
 
 2005-12-27  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2005-12-26  Ilkka Tuohela  <hile@iki.fi>
 
@@ -872,7 +876,7 @@
 
 2005-12-14  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2005-12-13  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
@@ -893,7 +897,7 @@
 
 2005-12-11  Ankit Patel  <ankit644@yahoo.com>
 
-        * gu.po: Updated Gujarati Translation.
+	* gu.po: Updated Gujarati Translation.
 
 2005-12-04  Funda Wang  <fundawang@linux.net.cn>
 
@@ -1015,7 +1019,7 @@
 
 2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>
 
-        * bn.po: Updated Bengali (bn) translation. Translation by Khandakar Mujahidul Islam <suzan@bengalinux.org>
+	* bn.po: Updated Bengali (bn) translation. Translation by Khandakar Mujahidul Islam <suzan@bengalinux.org>
 
 2005-09-24  Erdal Ronahi  <erdal.ronahi@gmail.com>
 
@@ -1023,10 +1027,11 @@
 
 2005-09-16  Clytie Siddall <clytie@riverland.net.au>
 
-        * vi.po: Updated Vietnamese translation.
+	* vi.po: Updated Vietnamese translation.
 
 2005-09-10  Erdal Ronahi <erdal.ronahi@gmail.com>
-        * ku.po: Created Kurdish Translation
+
+	* ku.po: Created Kurdish Translation
 
 2005-09-05  Baris Cicek <baris@teamforce.name.tr>
 
@@ -1046,7 +1051,7 @@
 
 2005-08-29  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
-        * cy.po: Updated Welsh translation.
+	* cy.po: Updated Welsh translation.
 
 2005-08-29  Changwoo Ryu  <cwryu@debian.org>
 
@@ -1114,7 +1119,7 @@
 2005-07-31  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Bulk updates to Finnish translation
-             for new gnome.fi website.
+	for new gnome.fi website.
 
 2005-07-31  Yair Hershkovitz  <yairhr@gmail.com>
 
@@ -1130,7 +1135,7 @@
 
 2005-07-28  Ilkka Tuohela  <hile@iki.fi>
 
-	* fi.po: Bulk change to some Finnish translations.       
+	* fi.po: Bulk change to some Finnish translations.
 
 2005-07-28  Artur Flinta  <aflinta@cvs.gnome.org>
 
@@ -1150,7 +1155,7 @@
 
 2005-07-24  Clytie Siddall <clytie@riverland.net.au>
 
-        * vi.po: Updated Vietnamese translation.
+	* vi.po: Updated Vietnamese translation.
 
 2005-07-21 Ankit Patel <ankit644@yahoo.com>
 
@@ -1167,7 +1172,7 @@
 
 2005-06-26  Hendrik Brandt  <heb@gnome-de.org>
 
-        * de.po: Updated German translation.
+	* de.po: Updated German translation.
 
 2005-06-22  Abel Cheung  <maddog@linuxhall.org>
 
@@ -1413,9 +1418,9 @@
 	* ca.po: Updated Catalan translation.
 
 2005-02-07  David Lodge <dave@cirt.net>
-                                                                                
-        * en_GB.po: Updated British translation.
-                                                                                
+
+	* en_GB.po: Updated British translation.
+
 2005-02-06  Nikos Charonitakis  <charosn@her.forthnet.gr>
 
 	* el.po: Updated Greek translation.
@@ -1756,9 +1761,9 @@
 	* da.po: Updated Danish translation.
 
 2004-11-21  David Lodge <dave@cirt.net>
-                                                                                
-        * en_GB.po: Updated British translation.
-                                                                                
+
+	* en_GB.po: Updated British translation.
+
 2004-11-20  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
@@ -1865,9 +1870,9 @@
 	* en_CA.po: Updated Canadian English translation.
 
 2004-10-03  David Lodge <dave@cirt.net>
-                                                                                
-        * en_GB.po: Updated British English translation.
-                                                                                
+
+	* en_GB.po: Updated British English translation.
+
 2004-10-03  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
@@ -1935,7 +1940,7 @@
 
 2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * hi.po: Updated Hindi translation.
+	* hi.po: Updated Hindi translation.
 
 2004-07-10  Alexander Shopov  <ash@contact.bg>
 
@@ -1996,8 +2001,8 @@
 
 2004-04-10  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * gu.po: Added Gujurati translation by
-        Gujarati Team <magnet@magnet-i.com>.
+	* gu.po: Added Gujurati translation by Gujarati Team
+	<magnet@magnet-i.com>.
 
 2004-04-04  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
@@ -2025,8 +2030,8 @@
 
 2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * pa.po: Punjabi translation by 
-        Amanpreet Singh Alam <amanlinux@netscape.net>.
+	* pa.po: Punjabi translation by Amanpreet Singh Alam
+	<amanlinux@netscape.net>.
 
 2004-03-21  Mugurel Tudor  <mugurelu@go.ro>
 
@@ -2116,7 +2121,7 @@
 
 2004-03-08  Dinesh Nadarajah <dinesh_list@sbcglobal.net>
 
-        * ta.po: Updated Tamil Translation.
+	* ta.po: Updated Tamil Translation.
 
 2004-03-06  Mətin Əmirov  <metin@karegen.com>
 
@@ -2206,9 +2211,9 @@
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
 2004-02-12  Arafat Medini  <lumina@silverpen.de>
-                                                                                
-        * ar.po: Updated Arabic translation.
-                                                                                
+
+	* ar.po: Updated Arabic translation.
+
 2004-02-11  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
@@ -2250,8 +2255,8 @@
 	* sq.po: Updated Albanian translation.
 
 2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>
- 
-         * hr.po: Updated Croatian translation.
+
+	 * hr.po: Updated Croatian translation.
 
 2004-02-08  Changwoo Ryu  <cwryu@debian.org>
 
@@ -2487,7 +2492,7 @@
 	* POTFILES.in: Added src/yelp-error.c.
 
 2004.01.10  Arafat Medini <lumina@silverpen.de>
-                                                                                
+
 	* ar.po: Updated Arabic translation
 
 2004-01-09  Miloslav Trmac  <mitr@volny.cz>
@@ -2615,8 +2620,8 @@
 	* nl.po: Dutch translation updated by Tino Meinen.
 
 2003-12-20  Arafat Medini <lumina@silverpen.de>
-                                                                                
-        * ar.po: Updated Arabic translation
+
+	* ar.po: Updated Arabic translation
 
 2003-12-20  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
@@ -2669,7 +2674,7 @@
 
 2003-12-07  Paisa Seeluangsawat  <paisa@users.sf.net>
 
-        * th.po: Updated Thai (th) translation.
+	* th.po: Updated Thai (th) translation.
 
 2003-12-04   Vincent van Adrighem  <adrighem@gnome.org>
 
@@ -2765,8 +2770,8 @@
 
 2003-08-27  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
-        * es.po: Revision of Spanish translation by
-                 Francisco Javier F. Serrador <serrador@arrakis.es>.
+	* es.po: Revision of Spanish translation by Francisco
+	Javier F. Serrador <serrador@arrakis.es>.
 
 2003-08-27  Jordi Mallach  <jordi@sindominio.net>
 
@@ -2802,7 +2807,7 @@
 
 2003-08-22  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
-        * sk.po: Update Slovak translation.
+	* sk.po: Update Slovak translation.
 
 2003-08-20  Kjartan Maraas  <kmaraas@gnome.org>
 
@@ -2840,7 +2845,7 @@
 
 2003-08-07  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
-        * es.po: Updated Spanish translation.
+	* es.po: Updated Spanish translation.
 
 2003-08-06  Wang Jian  <lark@linux.net.cn>
 
@@ -2946,9 +2951,9 @@
 	* is.po: Updated Icelandic translation
 
 2003-06-06  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
-                                                                                                                                                            
-        * es.po: Updated Spanish translation by
-                 Juan Manuel Garc?­a Molina <juanma_gm@wanadoo.es>.
+
+	* es.po: Updated Spanish translation by Juan Manuel
+	Garc?­a Molina <juanma_gm@wanadoo.es>.
 
 2003-06-04  Abel Cheung  <maddog@linux.org.hk>
 
@@ -2964,8 +2969,8 @@
 
 2003-05-30  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
-	* cy.po: Updated Welsh translation from
-        Chris M. Jackson  <chris@www.linux.org.uk>
+	* cy.po: Updated Welsh translation from Chris M. Jackson
+	<chris@www.linux.org.uk>
 
 2003-05-26  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
 
@@ -2987,7 +2992,7 @@
 
 2003-05-13  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2003-05-13  Abel Cheung  <maddog@linux.org.hk>
 
@@ -3007,8 +3012,8 @@
 
 2003-05-08  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
-        * es.po: Updated Spanish translation by
-                 Juan Manuel Garc?­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated Spanish translation by Juan Manuel
+	Garc?­a Molina <juanma_gm@wanadoo.es>
 
 2003-05-08  KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>
 
@@ -3021,7 +3026,7 @@
 
 2003-05-05  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
-        * ga.po: Updated Irish translation.
+	* ga.po: Updated Irish translation.
 
 2003-05-02  Christophe Merlet  <redfox@redfoxcenter.org>
 
@@ -3029,11 +3034,11 @@
 
 2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
-        * ga.po: Updated Irish Translation.
+	* ga.po: Updated Irish Translation.
 
 2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
-        * ga.po: Added Irish Translation
+	* ga.po: Added Irish Translation
 
 2003-04-30  Laurent Dhima  <laurenti@alblinux.net>
 
@@ -3096,7 +3101,7 @@
 
 2003-02-21  Paisa Seeluangsawat  <paisa@colorado.edu>
 
-        * th.po: Added Thai translation.
+	* th.po: Added Thai translation.
 
 2003-02-18  Metin Amiroff  <metin@karegen.com>
 
@@ -3135,7 +3140,7 @@
 	
 2003-02-02  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2003-01-29  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
 
@@ -3155,8 +3160,8 @@
 
 2003-01-22  He Qiangqiang  <carton@linux.net.cn>
 
-        * zh_CN.po: Updated Simplified Chinese translation by
-        Funda Wang <fundawang@en2china.com>.
+	* zh_CN.po: Updated Simplified Chinese translation by
+	Funda Wang <fundawang@en2china.com>.
 
 2003-01-22  Christian Rose  <menthos@menthos.com>
 
@@ -3381,7 +3386,7 @@
 
 2002-09-18  Marius Andreiana <mandreiana@yahoo.com>
 
-        * ro.po: updated
+	* ro.po: updated
 
 2002-09-01  Marius Andreiana <mandreiana@yahoo.com>
 
@@ -3394,7 +3399,7 @@
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2002-08-01  Szabolcs Ban <shooby@gnome.hu>
 
@@ -3605,7 +3610,7 @@
 
 2002-05-06  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation and converted to UTF-8.
+	* pt.po: Updated Portuguese translation and converted to UTF-8.
 
 2002-05-05  Gustavo Maciel Dias Vieira <gdvieira@zaz.com.br>
 
@@ -3700,7 +3705,7 @@
 
 2002-04-14  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2002-04-12  Hasbullah Bin Pit <sebol@ikhlas.com>
 
@@ -3728,8 +3733,8 @@
 
 2002-04-11  Mikael Hallendal  <micke@codefactory.se>
 
-	* ja.po: added Japanese translation from 
-	         Takeshi Aihana <aihana@gnome.gr.jp> 
+	* ja.po: added Japanese translation from Takeshi Aihana
+	<aihana@gnome.gr.jp> 
 
 2002-04-11  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
@@ -3797,7 +3802,7 @@
 
 2002-03-07  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2002-03-06  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -3951,7 +3956,7 @@
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2002-02-04  Carlos Perell-A????$)B????³ Mar-A????$)B????­n <carlos@gnome-db.org>
 
@@ -4037,7 +4042,7 @@
 2002-01-16  Peteris Krisjanis <peteris.krisjanis@ttc.lv>
 
 	* lv.po: Added Latvian translation.
-    
+
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
@@ -4054,7 +4059,7 @@
 
 2002-01-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated portuguese translation
+	* pt.po: Updated portuguese translation
 
 2002-01-08  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -4083,7 +4088,7 @@
 
 2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Added portuguese translation
+	* pt.po: Added portuguese translation
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
