--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@
 	- Version 2.15.91
 
 	* src/yelp-search-pager.c: 
-	Reomve translation of online URL in anticipation of a
+	Remove translation of online URL in anticipation of a
 	new script to do the redirection
 
 2006-08-05  Don Scorgie  <dscorgie@cvs.gnome.org>
