Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: yelp 2.9.90\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-10 02:04+0200\n"
-"PO-Revision-Date: 2006-08-10 02:19+0200\n"
+"PO-Revision-Date: 2006-08-10 02:27+0200\n"
 "Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -393,7 +393,7 @@ msgstr "Eines del sistema"
 
 #: ../data/toc.xml.in.h:30
 msgid "Utilities to manage your computer"
-msgstr "Utilitats per gestionar el vostre ordinador"
+msgstr "Utilitats per gestionar l'ordinador"
 
 #: ../data/toc.xml.in.h:31
 msgid "Utility applications"
@@ -429,7 +429,7 @@ msgstr "Adreces d'interès"
 
 #: ../data/ui/yelp.glade.h:5
 msgid "C_ase sensitive"
-msgstr "Diferènci_a entre majúscules i minúscules"
+msgstr "Diferenci_a entre majúscules i minúscules"
 
 #: ../data/ui/yelp.glade.h:6
 msgid "Find"
