Updated Russian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-10  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2008-08-10  Subhransu Behera  <arya_subhransu@yahoo.co.in>
 
 	* or.po: Updated Oriya Translation.
