Updated Malayalam translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-12  Ani Peter <peter.ani@gmail.com>
+
+	* ml.po: Updated Malayalam translation
+
 2008-08-10  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
