--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-12  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2008-08-12  Ani Peter <peter.ani@gmail.com>
 
 	* ml.po: Updated Malayalam translation
