--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-16  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated by Mate ORY.
+
 2006-08-13  Rahul Bhalerao  <b.rahul.pm@gmail.com>
 
 	* mr.po: Updated Marathi Translation
