Fix crash when apropos goes nuts (bug #347467) Patch from Priit Laes
* src/yelp-search-pager.c:
Fix crash when apropos goes nuts (bug #347467)
Patch from Priit Laes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-16  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	Fix crash when apropos goes nuts (bug #347467)
+	Patch from Priit Laes
+
 2006-08-10  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-info-parser.c: 
