--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2006-08-21 Khandakar Mujahidul Islam <suzan@bengalinux.org>
+	*bn.po: Updated Bengali translation.
+
 2006-08-18  Gintautas Miliauskas  <gintas@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
