--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-08-28  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-info-parser.c:
+	* src/yelp-io-channel.c:
+	Don't fall over when part of the info file
+	goes missing (bug #353209)
+
 2006-08-16  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-search-pager.c: 
