--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-29  Rajesh Ranjan <rajeshkajha@yahoo.com>
+
+        * hi.po: Updated Hindi Translation.
+
 2006-08-24  Raivis Dejus  <orvils@gmail.com>
 
         * lv.po: Updated Latvian translation.
